--- a/src/var.scss
+++ b/src/var.scss
@@ -1,6 +1,5 @@
 
 $border-color-hover: #1890ff;
-$border-color-hover: #1890ff;  //#096dd9
 $border-color: #999;
 $border-radius: 4px;
 $box-shadow-color: #1890ff;
@@ -19,3 +18,6 @@ $border-color-light: lighten($border-color, 30%);
 .box-shadow {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 }
+
+$input-height: 32px;
+$grey: #eee;
