--- a/styles/var.scss
+++ b/styles/var.scss
@@ -7,11 +7,15 @@ $button-active-bg:  #096dd9;//#40a9ff
 $button-bg: #40a9ff;
 $button-height: 32px;
 $color: white;
+$light-color:#666;
 $disabled-bg:white;
 $disabled-color:rgb(153,153,153);
 $font-size: 14px;
 $height: 32px;
 $red: #F1453D;
+$blue:#4a90e2;
+$light-grey:#eee;
+$black:black;
 
 
 $border-color-light: lighten($border-color, 30%);
