--- a/styles/var.scss
+++ b/styles/var.scss
@@ -22,6 +22,12 @@ $border-color-light: lighten($border-color, 30%);
 .box-shadow {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 }
-
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+@mixin spin {
+  animation: spin 2s infinite linear;
+}
 $input-height: 32px;
 $grey: #eee;
